syntax = "proto3";

import "google/protobuf/empty.proto";

package org.grpc.rangiffler;

option java_multiple_files = true;
option java_package = "org.grpc.rangiffler.grpc.users";
option java_outer_classname = "RangifflerUsersProto";

service RangifflerUserService {
  rpc GetAllUsers (google.protobuf.Empty) returns (UsersResponse);
  rpc GetCurrentUser (google.protobuf.Empty) returns (UserResponse);
  rpc GetFriends (google.protobuf.Empty) returns (UsersResponse);
  rpc SendInvitation (UserRequest) returns (UserResponse);
  rpc AcceptInvitation (UserRequest) returns (UserResponse);
  rpc DeclineInvitation (UserRequest) returns (UserResponse);
  rpc RemoveUserFromFriends (UserRequest) returns (UserResponse);
  rpc UpdateCurrentUser (UserRequest) returns (UserResponse);
  rpc GetInvitations (google.protobuf.Empty) returns (UsersResponse);
}

message UsersResponse {
  repeated User users = 1;
}
message User {
  string id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string avatar = 5;
  FriendStatus friend_status = 6;
}

message UserRequest {
  string username = 1;
  string first_name = 2;
  string last_name = 3;
  string avatar = 4;
}

message UserResponse {
  User user = 1;
}

enum FriendStatus {
  NOT_FRIEND = 0;
  INVITATION_SENT = 1;
  INVITATION_RECEIVED = 2;
  FRIEND = 3;
}